fix: book-appointment  inline-spacing home-2

--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,10 @@ input.theme-btn {
   }
 }
 
+.pt-194 {
+  padding-top: 194px;
+}
+
 .pt-183 {
   padding-top: 183px;
 }
@@ -8396,7 +8400,6 @@ ul.children {
 }
 .cta-area .book-appointment-area {
   margin-top: 36px;
-  padding: 194px 0 1px 0px;
   margin-bottom: 0;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
