--- a/sass/modules/_cta_area.scss
+++ b/sass/modules/_cta_area.scss
@@ -2,7 +2,7 @@
     padding-bottom: 80px;
     .book-appointment-area {
         margin-top: 36px;
-        padding: 194px 0 1px 0px;
+        // padding:  0 1px 0px;
         margin-bottom: 0;
         @include md {
             padding: 100px 0 1px 0px;
