--- a/sass/partials/_default-spacing.scss
+++ b/sass/partials/_default-spacing.scss
@@ -29,6 +29,9 @@
   }
 }
 
+.pt-194{
+  padding-top: 194px;
+}
 .pt-183{
   padding-top: 183px;
 }
